# mxs

./: .gitignore  go.mod  go.sum  main.go  mxs  readme.md
 scenes/conf/: api.json
 scenes/utils/: globalobj.go
api/iface/: iconnection.go  iconnmanger.go  idatapack.go  imsghandler.go  irequest.go  irouter.go
api/mnet/: connection.go  connmanager.go  datapack.go  msghandler.go  request.go  router.go  server.go  server_test.go
api/net/: connection.go  connmanager.go  datapack.go  message.go  msghandler.go  request.go  router.go  server.go  server_test.go
client/: client  client.go  client1  client1.go  client3.go  quicclient.go  server1t.go  test.go
client/test/: cert.go
gamex/: main.go
gamex/req/: loadhandle.go  pinghandle.go
gamex/utils/: globalobj.go
kcpTest/client/: client.go
log/: log.go
mmo/core/: aoi.go  aoi_test.go  entity.go  gird.go
proto/protoc/: test.go
quicTest/server/: main.go
scenes/: scenes.go
scenes/constcode/: area.go  message.go
scenes/proto/flat/flatbuffers/: BUILD.bazel
util/: globalobj.go
utils/: globalobj.go
websocket/iface/: iendpoint.go
websocket/mnet/: handler.go  process_endpoint.go  websocket_endpoint.go
zinx/: aaa.json  go.mod  go.sum  main.go  zinx
zinx/client/: client  client.go  client1  client1.go  client3.go  server1t.go
zinx/conf/: zinx.json
zinx/doc/: readme.md
zinx/log/: log.go
zinx/utils/: globalobj.go
zinx/ziface/: iconnection.go  iconnmanger.go  idatapack.go  imessage.go  imsghandler.go  irequest.go  irouter.go  iserver.go
zinx/zlog/: log.go
zinx/znet/: connection.go  (+9 more)
(+169 files in other folders)
